citrix-k8s-node-controller-bg.yaml
---
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: citrix-node-controller
spec:
  selector:
    matchLabels:
      app: citrix-node-controller
  replicas: 1
  template:
    metadata:
      labels:
        app: citrix-node-controller
    spec:
      serviceAccountName: citrix-node-controller
      containers:
      - name: citrix-node-controller
        image: "quay.io/citrix/citrix-k8s-node-controller:2.0.0"
        imagePullPolicy: Always
