frontend-developers-cic-bg.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cic-vpx
  labels:
    app: cic-vpx
spec: 
      serviceAccountName: frontenddeveloper-cpx
      containers:
      - name: cic-vpx
        image: "quay.io/citrix/citrix-k8s-ingress-controller:1.7.6"
        args:
          - --ingress-classes
            vpx-frontend
          - --feature-node-watch
            true
        imagePullPolicy: IfNotPresent
© 2020 GitHub, Inc.
Terms
Privacy
Security
Status
Help
Contact GitHub
Pricing
API
Training
Blog
About
