mobile-developers-cic-bg.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cic-vpx
  labels:
    app: cic-vpx
spec: 
      serviceAccountName: mobile-cpx
      containers:
      - name: cic-vpx
        image: "quay.io/citrix/citrix-k8s-ingress-controller:1.7.6"
        args:
          - --ingress-classes
            vpx-mobile
          - --feature-node-watch
            true
        imagePullPolicy: IfNotPresent
