mobile-developers-ingress-bg.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-vpx
  annotations:
   kubernetes.io/ingress.class: "vpx-mobile"
   ingress.citrix.com/insecure-termination: "redirect"
   ingress.citrix.com/frontend-ip: "191.168.1.231"
   ingress.citrix.com/secure_backend: '{"lb-service-mobile": "True"}'
spec:
  tls:
  - secretName: mobile-secret
  rules:
  - host:  mobile.agiledevelopers.com
    http:
      paths:
      - path: 
        backend:
          serviceName: lb-service-mobile
          servicePort: 443
